Revision history for Perl extension xPL.

{{$NEXT}}

        - Use Device::SerialPort for more portability - thanks to
          Lieven.
        - Remove deprecated xpl-owfs client.

0.12 Sun, 23 Oct 2011 23:23:50 +0100

        - Major API changes.  Warns if deprecated functionality is
          use.  Setting XPL_MESSAGE_VALIDATE environment variable
          gets back validation behaviour and implicit message type
          guessing but this behaviour should not normally be relied 
          upon.
        - Replace xPL::Message class/class_type fields with single
          schema field.
        - Make xPL::Message body parameter take an array to reliably
          preserve order without requiring external schema data.
        - Remove strictness/validation from xPL::Message (to get old
          behaviour set XPL_MESSAGE_VALIDATE environment variable to
          1).
        - Remove xPL::RF source field and make xPL::RF parsing return
          xPL::Message arguments rather than actual xPL::Messages to
          make parsers less coupled to xPL.
        - Make xPL::Message immutable - move the only mutation logic
          to xPL::Bridge.
        - Test improvements: more coverage, fewer test dependencies.
        - Add AnyEvent support to xPL::Listener.
        - SMS::Send::CSoft and SMS::Send::SMSDiscount moved to CPAN
          and debian packages placed in the xpl-perl repository.
        - xPL::Dock::XOSD now has --xosd-offset and --xosd-indent
          options for vertical and horizontal offsets.
        - Debian package improvements.
        - xPL::RF::RFXMeter report count rather than kwh since we can't
          tell if the device is an RFXMeter or RFXPower.  Thanks to
          Thomas Chiroux and others for pointing this out.
        - New xpl-smart client: Like xpl-hddtemp but works for more
          drives and reports them by serial number rather than device
          name which might change over time.