@@ -1,56 +1,0 @@
-#!/usr/bin/perl -w
-
-use xPL::Dock qw/-run/;
-
-=head1 NAME
-
-xpl-hddtemp - Perl script for an xPL hddtemp monitor
-
-=head1 SYNOPSIS
-
-  xpl-hddtemp [flags] [options]
-  where valid flags are:
-    --help            - show this help text
-    --verbose         - verbose mode (for the xPL layer)
-    --hddtemp-verbose - verbose mode (for the hddtemp layer)
-  and valid options are (default shown in brackets):
-    --interface if0            - the interface for xPL messages (first
-                                 non-loopback or loopback)
-    --hddtemp-poll-interval nn - number of seconds between polling
-                                 the hddtemp daemon (120)
-    --hddtemp-server host:port - address of hddtemp daemon (127.0.0.1:7634)
-
-  # start the hddtemp application with poll interval of 60 seconds
-  xpl-hddtemp --hddtemp-poll-interval 60
-
-  # start the hddtemp listening and broadcasting on first Ethernet
-  # interface in verbose mode using poll interval of 120 seconds
-  xpl-hddtemp --interface eth0 --verbose --hddtemp-verbose
-
-=head1 DESCRIPTION
-
-DEPRECATED: This script is deprecated in favour of the xpl-smart.
-
-This script is an xPL client that polls the hddtemp daemon (listening
-on the loopback interface) to check for temperature changes of hard
-disks.
-
-=head1 SEE ALSO
-
-xPL::Client(3), xPL::Listener(3), hddtemp(8)
-
-Project website: http://www.xpl-perl.org.uk/
-
-=head1 AUTHOR
-
-Mark Hindess, E<lt>soft-xpl-perl@temporalanomaly.comE<gt>
-
-=head1 COPYRIGHT
-
-Copyright (C) 2006, 2009 by Mark Hindess
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.8.7 or,
-at your option, any later version of Perl 5 you may have available.
-
-=cut
